# EksploreMas

./: .gitignore  README.md  performance.js
BackEnd/: Cargo.toml  Dockerfile  readme.md  schema_manual.txt
BackEnd/migrations/: 0001_wisata_alam_table.sql  0002_wisata_pendidikan_table.sql  0003_tempat_nongkrong_table.sql  0004_kuliner_table.sql  0005_user_table.sql  0006_admin_table.sql
BackEnd/src/: admin.rs  chatbot.rs  kuliner.rs  main.rs  news.rs  tempat_nongkrong.rs  user.rs  wisata_alam.rs  wisata_pendidikan.rs
FrontEnd/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
FrontEnd/src/: App.tsx  index.css  main.tsx
FrontEnd/src/components/Home/: CafeSection.tsx  Hero.tsx  NewsList.tsx  RecommendationList.tsx  ServiceIntro.tsx  StatGrid.tsx  TransIntro.tsx
FrontEnd/src/components/chat/: ChatButton.tsx  ChatPopup.tsx
FrontEnd/src/components/chatbot/: ChatbotAdminPanel.tsx
FrontEnd/src/components/layout/: Footer.tsx  Navbar.tsx  SectionHeading.tsx
FrontEnd/src/components/trans/: CorridorCard.tsx  CorridorGrid.tsx  TransImportantInfo.tsx
FrontEnd/src/components/trip/: CategorySelector.tsx  DurationSelector.tsx  (+2 more)
FrontEnd/src/context/: ChatContext.tsx
FrontEnd/src/data/: cafeDetails.ts  cafes.ts  news.ts  trans.ts  wisata.ts  wisataDetails.ts
FrontEnd/src/pages/: AdminDashboard.tsx  AdminLoginPage.tsx  CafeDetail.tsx  CafePage.tsx  Home.tsx  LoginPage.tsx  RegisterPage.tsx  TransBanyumas.tsx  TripPlanner.tsx  WisataDetail.tsx  WisataPage.tsx
FrontEnd/src/styles/: index.css
FrontEnd/src/types/: trip.ts
(+2 files in other folders)
