[package]
name = "capstone-be"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "macros", "postgres"] }
bcrypt = "0.17.1"
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["cors"] }
